feat: Add custom link :link:

--- a/src/ducks/operations/OperationActions.styl
+++ b/src/ducks/operations/OperationActions.styl
@@ -8,6 +8,7 @@
     background embedurl('../../assets/icons/actions/icon-comment.svg') em(16px) center no-repeat
 .action-app
 .action-refund
+.action-url
     background embedurl('../../assets/icons/actions/icon-link-out.svg') em(16px) center no-repeat
 .action-alert
     background embedurl('../../assets/icons/actions/icon-bell-16.svg') em(16px) center no-repeat
