fix: scroll :bug:

--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -103,6 +103,7 @@
             width 30px
             white-space nowrap
             padding-left 0
+            overflow hidden
 
             a
                 padding-left 4em
