feat: Add style on account switcher :art:

--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -78,6 +78,9 @@
             outline 0
             background grey-09
 
+        &:hover
+            background grey-09
+
     a
         display block
         text-transform uppercase
