fix: Remove number input to fix Firefox UI :rabbit:

--- a/src/styles/notifications.styl
+++ b/src/styles/notifications.styl
@@ -23,10 +23,10 @@ h5
     margin 0
     font-size .9em
 
-input[type='number'].notification-input
+input[type='text'].notification-input
     padding .5em .3em
     margin 0 5px
-    width 3.5em
+    width 4.5em
 
     &.suffixed::-webkit-inner-spin-button
     &.suffixed::-webkit-outer-spin-button
