--- a/src/ducks/Table/styles.styl
+++ b/src/ducks/Table/styles.styl
@@ -24,8 +24,6 @@
         flex      1 1 auto
         display   flex
         flex-direction column
-        // Because it needs a height to be scrollable. Don't ask.
-        height    1px
         overflow  auto
 
     tr
@@ -55,3 +53,6 @@
 
         tbody
             max-height  100%
+
+        td
+            padding em(5px, 5px)
