refactor: replace deprecated grays

--- a/src/ducks/menu/ActionMenu.styl
+++ b/src/ducks/menu/ActionMenu.styl
@@ -50,7 +50,7 @@
         span
             font-size 1em
             align-self top
-            color grey-11
+            color cool-grey
             text-transform capitalize
 
     .menu-header-right
