--- a/src/ducks/menu/Menu.styl
+++ b/src/ducks/menu/Menu.styl
@@ -19,5 +19,5 @@
 
 .coz-menu-item:hover
 .coz-menu-item:focus
-    background-color grey-10
+    background-color pale-grey
     outline          none
