--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -21,10 +21,10 @@
 
         &:last-child
             .coz-table-row:last-child
-                border-bottom 1px solid grey-09
+                border-bottom 1px solid silver
 
     .coz-table-row
-        border-bottom 1px solid grey-09
+        border-bottom 1px solid silver
 
     .coz-table-cell
     .coz-table-header
@@ -61,8 +61,8 @@
         color black
 
     .bnk-table-row-date
-        background-color grey-10
-        color grey-11
+        background-color pale-grey
+        color cool-grey
         font-size em(12px)
         text-transform uppercase
         font-weight bold
@@ -85,19 +85,19 @@
 
         .coz-table-body
             .coz-table-row
-                border-bottom 1px solid grey-09
+                border-bottom 1px solid silver
 
                 &:last-child
                     border-bottom 1px solid transparent
 
                     &:hover
-                        border-bottom 1px solid grey-09
+                        border-bottom 1px solid silver
 
                 &:fisrt-child
                     border-top 1px solid transparent
 
                     &:hover
-                        border-top 1px solid grey-09
+                        border-top 1px solid silver
         .bnk-table-action
             flex inherit
             width 30px
