--- a/src/styles/accountSwitch.styl
+++ b/src/styles/accountSwitch.styl
@@ -4,7 +4,7 @@
     position relative
     padding-bottom 20px
     margin-bottom 20px
-    border-bottom 1px solid grey-09
+    border-bottom 1px solid silver
 
 .account-switch-button
     margin 10px 0
@@ -19,21 +19,21 @@
         max-width 90%
         overflow hidden
         font-weight bold
-        color grey-08
+        color charcoal-grey
         text-overflow ellipsis
         white-space nowrap
 
     .account-num
         margin-top 8px
         font-size .8em
-        color grey-11
+        color cool-grey
         font-weight normal
 
     &.active
-        background grey-09
+        background silver
 
     &:focus
-        background grey-09
+        background silver
 
 .account-switch-menu
     position absolute
@@ -52,7 +52,7 @@
         margin 10px 0
         padding 0 19px
         font-size .8em
-        color grey-11
+        color cool-grey
 
     ul
         list-style none
@@ -68,7 +68,7 @@
         border 0
         border-left 3px solid transparent
         background 0
-        color grey-08
+        color charcoal-grey
         text-overflow ellipsis
         white-space nowrap
         cursor pointer
@@ -76,10 +76,10 @@
 
         &:focus
             outline 0
-            background grey-09
+            background silver
 
         &:hover
-            background grey-09
+            background silver
 
     a
         display block
@@ -95,5 +95,5 @@
 
     .account-count
         padding-left .5em
-        color grey-11
+        color cool-grey
         font-size .8em
