--- a/src/styles/figure.styl
+++ b/src/styles/figure.styl
@@ -5,7 +5,7 @@
 
 .bnk-figure-currency
     margin-left .2em
-    color       grey-11
+    color       cool-grey
 
 .bnk-figure-content--positive
     color   emerald
