--- a/src/styles/notifications.styl
+++ b/src/styles/notifications.styl
@@ -1,11 +1,11 @@
 @import 'cozy-ui'
 
 h4
-    color grey-08
+    color charcoal-grey
     font-size 1.2em
 
 h5
-    color grey-08
+    color charcoal-grey
     font-size 1em
     margin-top 0
     margin-bottom 5px
@@ -18,7 +18,7 @@ h5
     margin-bottom 20px
 
 .notification-description
-    color grey-11
+    color cool-grey
     flex-grow 1
     margin 0
     font-size .9em
