--- a/src/ducks/menu/Item.styl
+++ b/src/ducks/menu/Item.styl
@@ -2,5 +2,5 @@
 
 .coz-menu-item:hover
 .coz-menu-item:focus
-    background-color grey-10
+    background-color pale-grey
     outline          none
