--- a/src/styles/figureBlock.styl
+++ b/src/styles/figureBlock.styl
@@ -3,11 +3,11 @@
 .bnk-figure-wrapper
     font-size       32px
     margin-right    2.5em
-    color           grey-08
+    color           charcoal-grey
 
     .bnk-figure-label
         display         block
         margin-bottom   .5em
-        color           grey-11
+        color           cool-grey
         text-transform  uppercase
         font-size       12px
