--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -51,7 +51,7 @@
     width           100%
 
     .bnk-table-acct-number
-        color grey-11
+        color cool-grey
 
     .coz-table-cell
         flex 0 0 33%
