refactor: rename breakpoints

--- a/src/styles/breakpoints.styl
+++ b/src/styles/breakpoints.styl
@@ -1,9 +1,9 @@
 @require('cozy-ui')
 
-mobile()
+small-screen()
     @media (max-width: (768/basefont)rem)
         {block} // stylint: ignore
 
-tablet()
+medium-screen()
     @media (max-width: (1023/basefont)rem)
         {block} // @stylint ignore
