--- a/src/styles/select-dates.styl
+++ b/src/styles/select-dates.styl
@@ -23,7 +23,7 @@
     border-radius 4px
     box-sizing border-box
     border 1px solid grey-03
-    padding 0.75em
+    padding .75em
     outline 0
     cursor pointer
     font-size 1.125em
