--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -31,7 +31,19 @@
 
         .account_name
             color charcoal-grey
+            font-weight bold
             font-size 1em
+
+            &.alert
+                color pomegranate
+
+                span
+                    margin-left 5px
+                    heigth 1rem
+
+                    &:before
+                        vertical-align middle
+                        margin-bottom 3px
 
         .solde
             color charcoal-grey
