fix: 1px bug on select-dates

--- a/src/styles/select-dates.styl
+++ b/src/styles/select-dates.styl
@@ -16,6 +16,7 @@ select-date-height=3rem
     select
         border-radius 0
         height select-date-height
+        vertical-align top // corrects a 1px bug on Windows' Chrome
 
 
 +small-screen()
