refactor: Add red color on solde :warning:

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -75,6 +75,12 @@
             font-weight bold
             font-size 1em
 
+            &.alert
+                color pomegranate
+
+                span
+                    color pomegranate
+
             span
                 color cool-grey
                 font-weight inherit
