--- a/src/components/Topbar/styles.styl
+++ b/src/components/Topbar/styles.styl
@@ -13,7 +13,7 @@ $coz-bar-size = 48px
         position fixed
         top      0
         left     2.5em
-        right    0
+        right    48px
         z-index  $nav-index
         height   $coz-bar-size
 
