--- a/src/ducks/menu/ActionMenu.styl
+++ b/src/ducks/menu/ActionMenu.styl
@@ -59,13 +59,13 @@
         padding em(18px) em(18px) em(18px) em(9px)
 
 .action-bill
-    background embedurl('../../assets/icons/actions/icon-file.svg') em(16px) center no-repeat
+    background embedurl('assets/icons/actions/icon-file.svg') em(16px) center no-repeat
 .action-attach
-    background embedurl('../../assets/icons/actions/icon-link.svg') em(16px) center no-repeat
+    background embedurl('assets/icons/actions/icon-link.svg') em(16px) center no-repeat
 .action-comment
-    background embedurl('../../assets/icons/actions/icon-comment.svg') em(16px) center no-repeat
+    background embedurl('assets/icons/actions/icon-comment.svg') em(16px) center no-repeat
 .action-app
 .action-refund
-    background embedurl('../../assets/icons/actions/icon-link-out.svg') em(16px) center no-repeat
+    background embedurl('assets/icons/actions/icon-link-out.svg') em(16px) center no-repeat
 .action-alert
-    background embedurl('../../assets/icons/actions/icon-bell-16.svg') em(16px) center no-repeat
+    background embedurl('assets/icons/actions/icon-bell-16.svg') em(16px) center no-repeat
