fix: style :bug:

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -13,7 +13,7 @@
     border 0
     text-align left
     outline 0
-    background  embedurl('assets/icons/icon-chevron-down.svg') 90% center no-repeat
+    background  embedurl('../../assets/icons/icon-chevron-down.svg') 90% center no-repeat
 
     .account-name
         max-width 90%
@@ -74,10 +74,10 @@
     .account-switch-button-mobile
         width 100%
         height 100%
-        background embedurl('assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
+        background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
 
         &.active
-            background-image embedurl('assets/icons/actions/filter-active.svg')
+            background-image embedurl('../../assets/icons/actions/filter-active.svg')
 
 
 .account-switch-menu
@@ -135,7 +135,7 @@
 
     .active
         border-left-color dodger-blue
-        background  embedurl('assets/icons/icon-checked-blue.svg') 98% center no-repeat
+        background  embedurl('../../assets/icons/icon-checked-blue.svg') 98% center no-repeat
         font-weight bold
 
     .account-count
