--- a/src/ducks/commons/Nav.styl
+++ b/src/ducks/commons/Nav.styl
@@ -3,29 +3,29 @@
 [role=application]// @stylint ignore
     @extend $navigation
     .bnk-cat-balance
-        background: embedurl('assets/icons/icon-dashboard.svg') em(24px) center no-repeat
+        background: embedurl('../../assets/icons/icon-dashboard.svg') em(24px) center no-repeat
         &.active
-            background-image: embedurl('assets/icons/icon-dashboard-active.svg')
+            background-image: embedurl('../../assets/icons/icon-dashboard-active.svg')
     .bnk-cat-movements
-        background: embedurl('assets/icons/icon-arrow-left-right.svg') em(24px) center no-repeat
+        background: embedurl('../../assets/icons/icon-arrow-left-right.svg') em(24px) center no-repeat
         &.active
-            background-image: embedurl('assets/icons/icon-arrow-left-right-active.svg')
+            background-image: embedurl('../../assets/icons/icon-arrow-left-right-active.svg')
     .bnk-cat-categories
-        background: embedurl('assets/icons/icon-graph.svg') em(24px) center no-repeat
+        background: embedurl('../../assets/icons/icon-graph.svg') em(24px) center no-repeat
         &.active
-            background-image: embedurl('assets/icons/icon-graph-active.svg')
+            background-image: embedurl('../../assets/icons/icon-graph-active.svg')
     .bnk-cat-projections
-        background: embedurl('assets/icons/icon-lightbulb.svg') em(24px) center no-repeat
+        background: embedurl('../../assets/icons/icon-lightbulb.svg') em(24px) center no-repeat
         &.active
-            background-image: embedurl('assets/icons/icon-lightbulb-active.svg')
+            background-image: embedurl('../../assets/icons/icon-lightbulb-active.svg')
     .bnk-cat-savings
-        background: embedurl('assets/icons/icon-euro.svg') em(24px) center no-repeat
+        background: embedurl('../../assets/icons/icon-euro.svg') em(24px) center no-repeat
         &.active
-            background-image: embedurl('assets/icons/icon-euro-active.svg')
+            background-image: embedurl('../../assets/icons/icon-euro-active.svg')
     .bnk-cat-settings
-        background: embedurl('assets/icons/icon-people.svg') em(24px) center no-repeat
+        background: embedurl('../../assets/icons/icon-people.svg') em(24px) center no-repeat
         &.active
-            background-image: embedurl('assets/icons/icon-people-active.svg')
+            background-image: embedurl('../../assets/icons/icon-people-active.svg')
 
     @media (max-width: (1023/basefont)rem)
         .bnk-cat-balance
