--- a/src/styles/field.styl
+++ b/src/styles/field.styl
@@ -36,7 +36,7 @@
             @extend $icon
             @extend $icon-16
             opacity 1
-            background-image embedurl('assets/icons/icon-checked.svg')
+            background-image embedurl('../assets/icons/icon-checked.svg')
 
     .bnk-field-loading
     .bnk-field-saved
