--- a/src/styles/groupes.styl
+++ b/src/styles/groupes.styl
@@ -36,7 +36,7 @@
 
         &.icon-plus
             padding-left 1.5em
-            background  embedurl('assets/icons/icon-add.svg') left center no-repeat
+            background  embedurl('../assets/icons/icon-add.svg') left center no-repeat
 
 
 .bnk-form
@@ -61,4 +61,3 @@
         &:last-child
             padding-right 0
             text-align right
-
