--- a/src/styles/icons.styl
+++ b/src/styles/icons.styl
@@ -4,7 +4,7 @@ purple=#a75bcb
 green=#35ce68
 
 .sharing-icon
-    background-image embedurl('cozy-ui/assets/icons/ui/icon-share.svg')
+    background-image embedurl('../assets/icons/ui/icon-share.svg')
     display inline-block
     background-size .6rem .6rem
     width 1rem
