--- a/src/ducks/operations/OperationActions.styl
+++ b/src/ducks/operations/OperationActions.styl
@@ -1,14 +1,14 @@
 @require 'cozy-ui'
 
 .action-bill
-    background embedurl('assets/icons/actions/icon-file.svg') em(16px) center no-repeat
+    background embedurl('../../assets/icons/actions/icon-file.svg') em(16px) center no-repeat
 .action-attach
-    background embedurl('assets/icons/actions/icon-link.svg') em(16px) center no-repeat
+    background embedurl('../../assets/icons/actions/icon-link.svg') em(16px) center no-repeat
 .action-comment
-    background embedurl('assets/icons/actions/icon-comment.svg') em(16px) center no-repeat
+    background embedurl('../../assets/icons/actions/icon-comment.svg') em(16px) center no-repeat
 .action-app
 .action-refund
 .action-url
-    background embedurl('assets/icons/actions/icon-link-out.svg') em(16px) center no-repeat
+    background embedurl('../../assets/icons/actions/icon-link-out.svg') em(16px) center no-repeat
 .action-alert
-    background embedurl('assets/icons/actions/icon-bell-16.svg') em(16px) center no-repeat
+    background embedurl('../../assets/icons/actions/icon-bell-16.svg') em(16px) center no-repeat
