--- a/src/styles/accounts.styl
+++ b/src/styles/accounts.styl
@@ -46,4 +46,4 @@
 
         &.icon-plus
             padding-left 1.5em
-            background  embedurl('assets/icons/icon-add.svg') left center no-repeat
+            background  embedurl('../assets/icons/icon-add.svg') left center no-repeat
