refactor: design :art:

--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -16,6 +16,10 @@ $coz-bar-size = 48px
         right    48px
         z-index  $nav-index
         height   $coz-bar-size
+        text-overflow  ellipsis
+        overflow       hidden
+        white-space    nowrap
+        line-height    1
 
         > h2
             font-size 1.3em
