--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -35,51 +35,6 @@
     &:focus
         background silver
 
-@media (max-width: (768/basefont)rem)
-    .account-switch
-        top 0
-        right 0
-
-    .account-switch-button-mobile
-        background-color transparent
-
-@media (max-width: (1023/basefont)rem)
-    .account-switch
-        z-index 60
-        position fixed
-        top 68px
-        right 20px
-        height 47px
-        margin 0
-        padding 0
-        width 48px
-        border-width 0
-
-    .account-switch-menu-content
-        z-index 61
-        position fixed
-        top 58px
-        bottom 58px
-        left 10px
-        right 10px
-        max-height inherit
-        overflow auto
-
-    .account-switch-menu
-        top 0
-        left 0
-        right 0
-        max-height inherit
-
-    .account-switch-button-mobile
-        width 100%
-        height 100%
-        background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
-
-        &.active
-            background-image embedurl('../../assets/icons/actions/filter-active.svg')
-
-
 .account-switch-menu
     position absolute
     top 50%
@@ -142,3 +97,57 @@
         padding-left .5em
         color cool-grey
         font-size .8em
+
+@media (max-width: (1023/basefont)rem)
+    .account-switch
+        z-index 60
+        position fixed
+        top 68px
+        right 20px
+        height 47px
+        margin 0
+        padding 0
+        width 48px
+        border-width 0
+
+    .account-switch-menu-content
+        z-index 61
+        position fixed
+        top 58px
+        bottom 10px
+        left 50%
+        margin-left -200px
+        width 400px
+        max-height inherit
+        overflow auto
+
+    .account-switch-menu
+        top 0
+        left 0
+        right 0
+        max-height inherit
+
+    .account-switch-button-mobile
+        width 100%
+        height 100%
+        background embedurl('../../assets/icons/actions/filter.svg') center center no-repeat alpha(silver, 0.8)
+
+        &.active
+            background-image embedurl('../../assets/icons/actions/filter-active.svg')
+
+
+@media (max-width: (768/basefont)rem)
+    .account-switch
+        top 0
+        right 0
+
+    .account-switch-button-mobile
+        background-color transparent
+
+
+@media (max-width: (421/basefont)rem)
+    .account-switch-menu-content
+        left 10px
+        right 10px
+        margin-left inherit
+        width auto
