--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -15,6 +15,8 @@
         font-size 2em
 
     @media (max-width: (768/basefont)rem)
+        h2
+            margin 0
         h3
             margin-top 2em
             margin-bottom 1em
