feat: Big account swith on browser :sunrise:

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -35,14 +35,20 @@
     &:focus
         background silver
 
+.account-switch-menu-content
+    position fixed
+    top 78px
+    left 0
+    bottom 10px
+    width 440px
+    overflow auto
+    z-index: 60
+
 .account-switch-menu
-    position absolute
-    top 50%
-    left 10%
+    margin 20px
+    padding 0
     z-index 1
     overflow auto
-    max-height 350px
-    padding 0
     border solid 1px rgba(50, 54, 63, .12)
     border-radius 4px
     background white
