refactor: revisited mobile design :art:

--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -132,6 +132,7 @@
         left 0
         right 0
         max-height inherit
+        margin 0
 
     .account-switch-button-mobile
         width 100%
