refactor: Remove some styles :fire:

--- a/src/styles/pieChart.styl
+++ b/src/styles/pieChart.styl
@@ -1,66 +1,5 @@
-@import 'cozy-ui'
-
 .bnk-chart-pie
-    margin-top     2em
-    margin-left    -1.5em
-    position       relative
-
     canvas
-        margin     auto
-
-    &::after
-        content         ''
-        position        absolute
-        margin-top      em(-250px)
-        margin-left     em(31px)
-        width           em(250px)
-        height          em(250px)
-        background      transparent
-        border-radius   100%
-        box-shadow      0 -10px 1px rgba(0, 0, 0, .08) inset
-        pointer-events  none
-        opacity         0
-        animation       showAfterMidTime 3s forwards
-
-    &::before
-        content         ''
-        position        absolute
-        margin-left     em(32px)
-        margin-top      em(1px)
-        width           em(248px)
-        height          em(248px)
-        background      transparent
-        border-radius   100%
-        box-shadow      0 1px 3px 0 rgba(50, 54, 63, .19), 0 4px 12px 0 rgba(50, 54, 63, .12)
-        pointer-events  none
-        opacity         0
-        animation       showAfterMidTime 3s forwards
-
-@keyframes showAfterMidTime
-    0%
-        opacity 0
-    40%
-        opacity 0
-    60%
-        opacity 1
-    100%
-        opacity 1
-
-@media (max-width: (1260/basefont)rem)
-    .bnk-chart-pie
-        margin-top  -4em
-
-        canvas
-            float           right
-            margin-right    10em
-
-        &::after
-            margin-top  0
-            right       em(160px + 25px)
-
-        &::before
-            right       em(160px + 26px)
-
-@media (max-width: (750/basefont)rem)
-    .bnk-chart-pie
-        margin-top  2em
+        transform scale(0.8)
+        max-width 100%
+        margin 0 auto
