--- a/src/styles/parametres.styl
+++ b/src/styles/parametres.styl
@@ -1,9 +1,17 @@
 @import 'cozy-ui'
 
 
-.bnk-tabs
-    .bnk-coz-tab-list
-        left-spaced(-30px)
+.bnk-tabs .bnk-coz-tab-list
+    width calc(100% + 4em)
+    margin-left -2em
+
+    :first-child
+        padding-left 30px
+
+@media (max-width: (768/basefont)rem)
+    .bnk-tabs .bnk-coz-tab-list
+        width calc(100% + 2em)
+        margin-left -1em
 
         :first-child
-            padding-left 30px
+            padding-left 15px
