refactor: Remove function word :fire:

--- a/src/styles/pieChart.styl
+++ b/src/styles/pieChart.styl
@@ -1,5 +1,5 @@
 .bnk-chart-pie
     canvas
-        transform scale(0.8)
+        transform scale(.8)
         max-width 100%
         margin 0 auto
