refactor: design :art:

--- a/src/components/Figure/FigureBlock.styl
+++ b/src/components/Figure/FigureBlock.styl
@@ -1,19 +1,19 @@
 @import 'cozy-ui'
 
 .bnk-figure-wrapper
-    font-size       em(32px)
-    color           charcoal-grey
+    color charcoal-grey
 
     .bnk-figure-label
-        display         block
-        margin-bottom   .5em
-        color           cool-grey
-        text-transform  uppercase
-        font-size       em(12px)
+        color cool-grey
+        margin 0
+        text-transform uppercase
+        font-size em(12px)
+        line-height em(16px)
+
+    .bnk-figure
+        font-size em(32px)
+        line-height em(42px)
 
 @media (max-width: (768/basefont)rem)
     .bnk-figure-wrapper
-        font-size em(32px)
-
-        .bnk-figure-label
-            font-size em(12px)
+        font-size .7em
