--- a/src/ducks/commons/Topbar.styl
+++ b/src/ducks/commons/Topbar.styl
@@ -2,6 +2,10 @@
 
 $coz-bar-size = 48px
 
+.fil-topbar
+    > h2
+        margin 0 auto 1.5em
+
 @media (max-width: (768/basefont)rem)
     .fil-topbar
         bottom-spaced(10px)
