--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -5,9 +5,9 @@
     display         flex
     flex-direction  column
     flex            1 1 100%
-    height          100%
     text-align      left
     color           grey-11
+    margin-bottom 3em
 
     thead
         flex 0 0 em(31px, 16px)
@@ -39,7 +39,7 @@
 
     td
         box-sizing  border-box
-        padding     em(15px, 14px) em(32px, 14px) // @stylint ignore
+        padding     1em 2rem
         font-size   14px
         flex 1 0 auto
 
@@ -53,6 +53,19 @@
 
         tbody
             max-height  100%
+            font-size 0.8em
 
         td
-            padding em(5px, 5px)
+            padding 1em 1rem
+
+    .coz-table-td-with-icon
+        background-repeat no-repeat
+        padding-left calc(3rem + 32px)
+        background-position 2rem
+        background-size 32px
+        text-transform uppercase
+
+        @media (max-width: (768/basefont)rem)
+            padding-left calc(1.5rem + 26px)
+            background-position 1rem
+            background-size 26px
