--- a/src/ducks/categories/Categories.styl
+++ b/src/ducks/categories/Categories.styl
@@ -1,34 +1,28 @@
 @import 'cozy-ui'
 
-.bnk-cat-form
+.bnk-cat-top
     display         flex
     flex-direction  row
+    flex-wrap wrap
 
-    select
-        padding-right   2em
-        font-size       em(18px)
-        font-weight     900
+    .bnk-cat-form
+        flex-basis 50%
 
-
-.bnk-cat-debits
-.bnk-cat-credits
-    display         flex
-    width           100%
-    margin          .5em 0 4em
-    flex-direction  row
-
-.bnk-cat-figure
-    flex           1 0 18em
-    position       relative
-
-.bnk-cat-title
-    margin          2em 0 .5em
-
-@media (max-width: (1260/basefont)rem)
-    .bnk-cat-debits
-    .bnk-cat-credits
-        flex-wrap       wrap
-        flex-direction  column-reverse
+        .bnk-cat-filter
+            padding 2rem 0
 
     .bnk-cat-figure
-        flex            1 0 4em
+        flex-basis 50%
+
+@media (max-width: (768/basefont)rem)
+    .bnk-cat-top
+        text-align center
+
+        .bnk-cat-form
+            flex-basis 100%
+
+            .bnk-cat-filter
+                padding 1rem 0
+
+        .bnk-cat-figure
+            flex-basis 100%
