refactor: use Table in Operation :flushed:

--- a/src/ducks/menu/ActionMenu.styl
+++ b/src/ducks/menu/ActionMenu.styl
@@ -33,8 +33,11 @@
     border-width 0
 
 .menu-header
+    font-size 0.8em
     display flex
     padding 0 0 0 1em!important
+    background-repeat no-repeat
+    background-position-y 50%
     background-position-x 1em!important
 
     .menu-header-left
