refactor: Add color on column :art:

--- a/src/ducks/operations/Operations.styl
+++ b/src/ducks/operations/Operations.styl
@@ -13,6 +13,11 @@
     .bnk-op-actions
         flex-basis 10%
 
+    tbody
+        .bnk-op-amount
+        .bnk-op-desc
+            color charcoal-grey
+
 @media (max-width: (768/basefont)rem)
     .bnk-op-table
         .bnk-op-desc
@@ -25,10 +30,6 @@
         .bnk-op-action
         .bnk-op-actions
             display none
-
-        tbody
-            .bnk-op-desc
-                color charcoal-grey
 
 // Actions
 
