refactor: Use Toggle component :hammer:

--- a/src/ducks/categories/Categories.styl
+++ b/src/ducks/categories/Categories.styl
@@ -10,6 +10,11 @@
 
         .bnk-cat-filter
             padding 2rem 0
+            > span
+                margin-right 1em
+            > label
+                position absolute
+                line-height 24px
 
     .bnk-cat-figure
         flex-basis 50%
