refactor: design :art:

--- a/src/ducks/categories/Categories.styl
+++ b/src/ducks/categories/Categories.styl
@@ -13,6 +13,7 @@
             > span
                 margin-right 1em
             > label
+                font-size 0.8em
                 position absolute
                 line-height 24px
 
@@ -21,7 +22,6 @@
 
 @media (max-width: (768/basefont)rem)
     .bnk-cat-top
-        text-align center
 
         .bnk-cat-form
             flex-basis 100%
